headlines horizontal scrolling fix for IE6

--- a/ie6.css
+++ b/ie6.css
@@ -2,6 +2,9 @@
 	display : none;
 }
 
+#headlinesContainer {
+	width: expression((parseInt(document.documentElement.clientWidth)-281)+'px');
+}
 
 #headlinesInnerContainer {
 	position : normal;
